@@ -10,7 +10,8 @@
    * Added warning about strange grid settings (MGparm)
    * Fixed a bug in vpmg.c that occured when a user supplied a dielectric map
       with the ionic strength set to zero, causing the map to not be used.
-
+   * Removed deprecated (as of 0.5.0) tools/manip/acc in lieu of new APOLAR 
+     APBS features
 #############################################################################
 BETA PUBLIC RELEASE VERSION 0.5.0       Jan-2007
 #############################################################################
